<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fouriam.android.esgi.fr.filmdroid.FilmFragment"
    android:background="@color/white"
    android:clickable="true"
    android:id="@+id/backgroundBack">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fouriam.android.esgi.fr.filmdroid.FilmFragment"
        android:clickable="true"
        android:id="@+id/background">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/film_page_title"
            android:id="@+id/filmsPageTitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/titleFilmText"
            android:layout_below="@+id/filmsPageTitle"
            android:layout_toRightOf="@+id/filmImage"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/film_year"
            android:id="@+id/filmYearLabel"
            android:layout_below="@+id/titleFilmText"
            android:layout_alignLeft="@+id/filmGenreLabel"
            android:layout_alignStart="@+id/filmGenreLabel"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/yearText"
            android:layout_alignBottom="@+id/filmYearLabel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:layout_toRightOf="@+id/filmYearLabel"
            android:layout_toEndOf="@+id/filmYearLabel"
            android:layout_alignTop="@+id/filmYearLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/film_genre"
            android:id="@+id/filmGenreLabel"
            android:layout_below="@+id/filmYearLabel"
            android:layout_alignLeft="@+id/filmNationnalitylabel"
            android:layout_alignStart="@+id/filmNationnalitylabel"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text=""
            android:id="@+id/genreText"
            android:layout_toRightOf="@+id/filmGenreLabel"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:layout_alignTop="@+id/filmGenreLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/film_nationnality"
            android:id="@+id/filmNationnalitylabel"
            android:layout_below="@+id/genreText"
            android:layout_alignRight="@+id/filmsPageTitle"
            android:layout_alignEnd="@+id/filmsPageTitle"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text=""
            android:id="@+id/nationnalityText"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/filmNationnalitylabel"
            android:layout_alignLeft="@+id/filmNationnalitylabel"
            android:layout_alignStart="@+id/filmNationnalitylabel" />

        <TextView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/film_realisator"
            android:id="@+id/filmRealisatorLabel"
            android:layout_below="@+id/nationnalityText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/realisatorText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/filmRealisatorLabel"
            android:layout_above="@+id/filmActorsLabel"
            android:layout_toRightOf="@+id/filmRealisatorLabel"
            android:layout_toEndOf="@+id/filmRealisatorLabel"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/film_actors"
            android:id="@+id/filmActorsLabel"
            android:layout_below="@+id/filmRealisatorLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text=""
            android:id="@+id/actorsText"
            android:layout_below="@+id/filmActorsLabel"
            android:layout_alignRight="@+id/realisatorText"
            android:layout_alignEnd="@+id/realisatorText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/film_synopsis"
            android:id="@+id/filmSynopsisLabel"
            android:layout_below="@+id/actorsText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text=""
            android:id="@+id/synopsisText"
            android:layout_below="@+id/filmSynopsisLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/film_addFavoriteBtn"
            android:id="@+id/addFavoriteBtn"
            android:layout_below="@+id/synopsisText"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filmImage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/filmRealisatorLabel"
            android:layout_toStartOf="@+id/filmsPageTitle"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/filmsPageTitle" />

    </RelativeLayout>
</RelativeLayout>